--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.9.0",
     "bootstrap": "^5.3.5",
     "date-fns": "^4.1.0",
+    "jspdf": "^3.0.1",
     "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-datepicker": "^8.4.0",
